--- a/cryptodash/src/App/App.css
+++ b/cryptodash/src/App/App.css
@@ -1,4 +1,5 @@
 body {
-  background-color: black;
+  background-color: #010e3c;
   color: white;
+  font-family: 'Roboto Condensed', sans-serif;
 }
