Revert "fix(finalFixes): last fix before launching app"

--- a/cryptodash/src/App/App.css
+++ b/cryptodash/src/App/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #010e2c;
+  background-color: #010e3c;
   color: white;
-  font-family: 'Do Hyeon', sans-serif;
-};
+  font-family: 'Roboto Condensed', sans-serif;
+}
